# gestor-de-finanzas

./: .env.example  .gitignore  LICENSE  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Cargo.toml
backend/.sqlx/: query-00631329eb00e2e7116e9f859c38e6c639bbc7155a60b6b1014d29e2680bdbeb.json  query-01d9d3a9a5f514b87d41110ed38e8b41f2171cfbd58a056607b2682d7c0e0001.json  query-023d4f44eabadb7e3e26e7469fdfbaa745cd507f98aa9636640ff59166db6534.json  query-030c9fb372cbb63d978dadf227f8b07743721aa505ff293dc0a561c457935fbb.json  query-048453dd21ab25cfd8f36d72fb6b2e6a5a9d7753f8e54069cf43b0903ae39211.json  query-06694c1d82897c702eb2646934660308ae23e3d9e099e1189edff465958fe476.json  query-07e7b641f5facb48f08095c54040962b5af54d2406f003092abccfd30ce424af.json  query-0a01e3a18631035ca6014a489e478f53b3980e000dd732aae22202f8eb3075bb.json  query-0d054cd07210a0d626cc18a1203978efd1cf549e1d99c95c19acd09c5b0fc781.json  query-0dbc1904fcaa143cb9d3d2afd111f2e055cfe46ad71b360027a0eed7945c02e3.json  query-0dc916f434cca6ded72c4aee8b4a51550098ce8688985acc4d3537ba5521b305.json  query-0eaf74122b0f940ef2e0267ab8050ff0014085fb65caccb1715b60be03cdad43.json  query-105e5761b6eae351339be9a83cd890ac77bcd8c09060924af93e055766db2b83.json  query-12a850d8f70608fd408b8a121f9801e7b179323268f9da04c320bdd3d622bb5f.json  query-133ce38bcd2c026277e1c18f1c8bbb4415b0ec8313048d86af731ff986525b4c.json  query-1365eee4219200aa786fb0b3c2474ea60d7e0bb7a89c60e0477bebaa20559018.json  query-1457800aa2cc7f4587fe72ef401076b7ca78c25437a282de5e293fb51ab42a7d.json  query-16c8db737059dfbd7d95fb730be7497af5734c824762e06764ff91a37881911c.json  query-182876715902b2538746259b50785e1c5af65e6082b83074ff4badfc64465113.json  query-186aaf8ff13d31ede49458ee70f7077171eaebba943ff2c6daedd316af64d2af.json  query-1b1b8a5828c51c6e552587c073fa81bb798fc95538a31781a899da5e95e82952.json  query-22219f982074c57c79a787a416d76b32d98aa24848d1fdb53ac913b8309474bc.json  query-27088932d0d741fdb230406370720e8cbee9f9edd31ab632d249c727b9013deb.json  query-2b218be4d82b3c6510f444574a3f6a436cee4c5ba35d172de57328c9c93971ad.json  query-2bee4eae0ce77e30fc18d00425565fc63858f90993ed81724301c59f48d831c0.json  query-2c694ad747f251415a6bb013dec6b30c7fd36cf36b3e618835e0bd312f7191b0.json  query-2d2f3990ba5c093930762abc4606e06ae9fbe1e86d67ee913c61b11a0c7b0e25.json  query-314340f27a513e51bdd2b536a1e02044899ddac045a9893d63638cc186e8ba35.json  query-33755964405c6f6f5b561af4fbf00ca05379e52f3e5111c1cee2ced1a8786414.json  query-3741e2b853c5b92fbac110db6dbf9607003a6e6a2a04cdeeeff4189e9ff65a85.json  query-38edbab578beda783df3ba23fab1fce7c34b17848c44b4e84d04070c0845ae00.json  query-39a73abf381a52da87ff53eb76e4a87fea94c43acf863fcef822e85969996803.json  query-40f7a58c593c7d1513a10ec772b2710bded3dc859d1bf6e3cf2ed1f21aacc7cf.json  query-418f9ff688061e68a994ac408a1a70021076a2945ea59334703e1a32170ee1be.json  query-41acb8574eb5927e8ea911ddb38fa3e241fce12498ffff0c2778ef5daf9924cb.json  query-43de0da308ad62af9777985786085c454afb0d23cb552c3a34e80006f9076b60.json  query-43f8e5f9be909afb68c1ad54431cbca4dbe59d548b0ca5be98fc729a73023ea0.json  query-453a40ac9637c89ff9758424a14ba42e6c0b5d9f5f39a0c13fb43e8214a99e3f.json  query-46fa6fd486738151395751b4bcafaf52c78f3d1ef67faa754c9c2631dbeace9c.json  (+129 more)
backend/docker/: Dockerfile  (+2 more)
frontend/: Cargo.toml  Trunk.docker.toml  Trunk.toml  index.html  tailwind.config.js
(+157 files in other folders)
