[package]
name = "gestor"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros","uuid", "chrono"] }
dotenvy = "0.15"
serde_json = "1.0"   
bcrypt = "0.15"     
