[package]
name = "gestor"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros","uuid", "chrono", "rust_decimal"] }
rust_decimal = { version = "1", features = ["serde-with-str", "maths"] }
dotenvy = "0.15"
serde_json = "1.0"
bcrypt = "0.15"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
# Gráficas de tendencia (línea) y flujo de dinero (pastel) para
# /analytics/charts/* — renderiza a SVG en el servidor, ver
# `src/analytics/graficos.rs`.
charts-rs = { version = "0.3", default-features = false }
